# tangy-robot

./: .gitignore  ASUS Xtion Bug Fix  Changelog  HowTo - Mapping.txt  Installation Instructions.txt  To_Do_list.txt  install_nite_script  left_arm_angles  left_arm_pos  machine.sh  project.machine  right_arm_angles  right_arm_pos  run_bingo.sh  tangy_install_script
src/bingo_group/bingo_detection/: CMakeLists.txt  CalledNumbers.txt  Numbers.txt  NumbersBackup.txt  bingoNumbers.txt  description.txt  package.xml
src/bingo_group/bingo_detection/action/: BingoDetection.action
src/bingo_group/bingo_detection/include/: bingo_detection_client.h  bingocard.h  bingocardfinder.h  bingodetectionserver.h  debugopencv.h  processedimage.h  redmarkers.h  squarefinder.h  subscribernode.h  surfdetection.h
src/bingo_group/bingo_detection/launch/: BingoDetection_client.launch  BingoDetection_server.launch  GSCAM.launch
src/bingo_group/bingo_detection/src/: BingoDetectionClient.cpp  bingocard.cpp  bingocardfinder.cpp  bingodetectionserver.cpp  client_test.cpp  debugopencv.cpp  main.cpp  mainBingo.cpp  mainSubscribeToBingoNode.cpp  processedimage.cpp  redmarkers.cpp  squarefinder.cpp  subscribernode.cpp  surfdetection.cpp
src/bingo_group/bingo_game/: CMakeLists.txt  How to run Bingo Game.txt  package.xml  progress.txt
src/bingo_group/bingo_game/include/: ArmOptimizer.h  MoveBaseClient.h  bingo_number_handler.h  demo_number_handler.h  help_light_client.h  help_text_handler.h  intro_speech_handler.h  joke_handler.h  neck_handler.h  outro_speech_handler.h  small_talk_handler.h
src/bingo_group/bingo_game/launch/: BingoGameServer.launch  BingoGameServer_old.launch  BingoGameServer_remoteHelp.launch  calibrate_kinect.launch  faceTracker.launch  openni2.launch
src/bingo_group/bingo_game/src/: bingo_game_client.cpp  bingo_number_handler.cpp  demo_number_handler.cpp  face_tracker.cpp  help_text_handler.cpp  intro_speech_handler.cpp  joke_handler.cpp  neck_handler.cpp  outro_speech_handler.cpp  small_talk_handler.cpp
src/bingo_group/bingo_game/talking/: demo_hello.txt  demo_intro.txt  demoprogress.txt  facts.txt  full_progress.txt  help_text.txt  intro.txt  jokes.txt  progress.txt  smallTalk.txt
src/bingo_group/help_indicators/: CMakeLists.txt  Calibration for kinect README.txt  package.xml
src/bingo_group/help_indicators/calibration/: depth_PS1080_PrimeSense.yaml
src/bingo_group/help_indicators/launch/: Run_Just_Openni2.launch  calibrate_kinect.launch  help_indicators.launch  help_indicators_test.launch
src/bingo_group/help_indicators/msg/: transformRequest.msg  triangle.msg
src/bingo_group/help_indicators/src/: acknowledge_help.cpp  help_indicators.cpp  help_indicators_client.cpp  help_transformers.cpp  helpers.cpp  ir_rgb_stream.cpp  kinect_calibration.cpp  main.cpp  squareFinder.cpp  test_help_indicators.cpp  transform_help_indicator.cpp  triangle_detection.cpp  (+2 more)
src/debug/: CMakeLists.txt  package.xml
src/debug/src/: debug.cpp
src/demonstration_learning/action_executor/: CMakeLists.txt  package.xml
src/demonstration_learning/activity_learner/: CMakeLists.txt  package.xml
src/demonstration_learning/demonstration_learning_msgs/: CMakeLists.txt  package.xml
src/demonstration_learning/rqt_task_learning/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/demonstration_learning/world_state_identifier/: CMakeLists.txt  package.xml
src/deprecated_packages/hand_detection/: CMakeLists.txt  package.xml  readme.txt
src/example_package/: CMakeLists.txt  package.xml
src/example_package/src/: example.cpp
src/fault_diagnosis/: CMakeLists.txt  package.xml
src/fault_diagnosis/msg/: Fault.msg
src/fault_diagnosis/src/: audio_saver(old).cpp  audio_saver.cpp  fault_diagnosis_core.cpp  fault_diagnosis_print_requester.cpp  fault_monitor__bingo_environment.cpp  fault_monitor_audio.cpp  fault_monitor_axiscamera.cpp  fault_monitor_depth.cpp  fault_monitor_disconnect.cpp  fault_monitor_kinect.cpp  fault_monitor_navigation.cpp  fault_monitor_rangefinder.cpp  fault_monitor_webcam.cpp  image_saver.cpp  test_monitor.cpp  test_monitor_keyboard.cpp
src/fault_diagnosis/srv/: fault_return.srv  print_faults.srv
src/music_player/: CMakeLists.txt  Instructions.txt  package.xml
src/music_player/action/: music_player.action
src/music_player/include/: audio_player.h  music_player.h  music_player_client.h
src/music_player/launch/: audio_tester.launch  music_tester.launch
src/music_player/src/: audio_player.cpp  audio_player_client_test.cpp  music_player.cpp  music_player_client.cpp
src/robot_gui/: CMakeLists.txt  package.xml
src/robot_gui/action/: Robot_gui.action  Telepresence.action
src/robot_gui/files/: callfriend.py  chatfriend.py  finish.py  starts.py
src/robot_gui/launch/: robot_gui.launch
src/robot_gui/src/: main.cpp  main_window.cpp  qnode.cpp  robot_gui_server.cpp
src/robot_gui/ui/: main_window.ui
src/tangy_launcher/: CMakeLists.txt  package.xml
src/tangy_launcher/launch/: tangy_launcher.launch
src/tangy_move/: CMakeLists.txt  package.xml  pseudocode.txt
src/tangy_move/plugins/: new_layer.cpp
src/tangy_move/srv/: navServerCmd.srv
src/trivia/: CMakeLists.txt  README.txt  package.xml
src/trivia/action/: TriviaGame.action
src/trivia/database/: Animals.txt  Food.txt  General_Knowledge.txt  Hash_food.txt  Hash_general_knowledge.txt  Hash_history.txt  Hash_misc_text.txt  Hash_misc_text_new.txt  Hash_movies.txt  Hash_science.txt  History.txt  Index.txt  Movies.txt  Readme.txt  Science.txt  misc_text.txt  misc_text2.txt  misc_text_new.txt
src/trivia/launch/: trivia_game.launch  trivia_game_limited.launch
src/trivia/scripts/: keyboard0.txt  keyboard1.txt  store_output.sh
src/trivia/src/: a.out  gui_test_script.cpp  help_text_handler.cpp  intro_speech_handler.cpp  joke_handler.cpp  keyboard.cpp  keyboard_test.cpp  outro_speech_handler.cpp  questions.cpp  trivia.cpp  trivia_game_client.cpp  trivia_limited.cpp  trivia_question_handler.cpp  verbal_interactions.cpp
src/trivia/talking/: help_text.txt  intro.txt  jokes.txt  outro.txt
(+886 files in other folders)
