<?xml version="1.0"?>
<package format="2">
  <name>example_package</name>
  <version>0.0.0</version>
  <description>The example_package package</description>
  <maintainer email="youremail@gmail.com">YourName</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
