<?xml version="1.0"?>
<package>
  <name>fault_diagnosis</name>
  <version>0.0.0</version>
  <description>Tangy fault diagnosis package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="andrew.bowers@mail.utoronto.ca">Andrew B</maintainer>

  <license>BSD</license>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>keyboard</build_depend>
 <build_depend>image_transport</build_depend>
 <build_depend>actionlib_msgs</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>text_to_speech</build_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>message_runtime</run_depend>
 <run_depend>diagnostic_msgs</run_depend>
 <run_depend>keyboard</run_depend>
 <run_depend>image_transport</run_depend>
 <run_depend>actionlib_msgs</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>text_to_speech</run_depend>
</package>
