<?xml version="1.0"?>
<package>
  <name>robot_gui</name>
  <version>0.1.0</version>
  <description>

     robot_gui

  </description>
  <maintainer email="rafael@gmail.com">rafael</maintainer>
  <author>rafael</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>text_to_speech</build_depend>
  <build_depend>drrobot_h20_player</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>drrobot_h20_player</run_depend>
  <run_depend>text_to_speech</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
