<package>
	<name>bingo_detection</name>
	<version>0.0.1</version>
	<description>bingo detection package</description>

	<maintainer email="geoffrey.louie@gmail.com">Geoff</maintainer>
	<author email="geoffrey.louie@gmail.com">Geoff</author>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>image_transport</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>gscam</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>opencv2_4</build_depend>
	<build_depend>text_to_speech</build_depend>

	
	<run_depend>image_transport</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>gscam</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>opencv2_4</run_depend>
	<run_depend>text_to_speech</run_depend>


</package>


