<?xml version="1.0"?>
<package>
  <name>help_indicators</name>
  <version>1.0.0</version>
  <description>The help_indicators package</description>

  <maintainer email="frank@todo.todo">frank</maintainer>
  <license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>gscam</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>opencv2_4</build_depend>
        <build_depend>drrobot_h20_player</build_depend>
        <build_depend>sensor_msgs</build_depend>

	<run_depend>image_transport</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>gscam</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>opencv2_4</run_depend>
        <run_depend>drrobot_h20_player</run_depend>
</package>
